# cloudbolt-exercise

./: .gitignore  INSTRUCTIONS.md  Makefile  POSTMORTEM.md  Pipfile  README.md  pyproject.toml  requirements.txt  statistics.py  stats.py
src/config/: settings.py  urls.py  wsgi.py
src/messageboard/: apps.py  factories.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py  viewsets.py
src/messageboard/accounts/: views.py
src/messageboard/accounts/api/: serializers.py  urls.py  views.py
src/messageboard/accounts/tests/: test_api.py  test_auth_views.py
src/messageboard/management/commands/: seed_database.py
src/messageboard/migrations/: 0001_initial.py  0002_auto_20201029_0052.py  0003_auto_20201029_0417.py
src/messageboard/static/css/: messageboard.css
src/messageboard/templates/accounts/: login.html  logout.html  signup.html
src/messageboard/templates/messageboard/: base.html  message_confirm_delete.html  message_form.html  messages.html  new_message.html  new_thread.html  threads.html  topics.html
src/messageboard/tests/: test_models.py  test_permissions.py
