[tool.poetry]
name = "coding-exercise"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
django = ">=2.2.0, <3.0.0"
django-rest-framework = "^0.1.0"
requests = "^2.23.0"
textblob = "^0.15.3"
drf-flex-fields = "^0.8.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
factory-boy = "^2.12.0"
flake8 = "^3.7.9"
ipython = "7.16"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
